--- a/src/index.njk
+++ b/src/index.njk
@@ -5,66 +5,7 @@ pageId: "Homepage"
 layout: "base.html"
 type: "Page"
 ---
-<!-- <svg width="450" height="450" viewBox="0 0 450 450" fill="none" xmlns="http://www.w3.org/2000/svg">
-                {# <rect x="3" y="3" width="444" height="444" rx="222" fill="#C3E2FF"/> #}
-                {# <rect x="3" y="3" width="444" height="444" rx="222" stroke="#752A04" stroke-width="4"/> #}
-                <circle cx="150" cy="300" r="75" fill="#752A04" stroke="#752A04" stroke-width="2"/>
-                <circle cx="300" cy="150" r="75" fill="#752A04" stroke="#752A04" stroke-width="2"/>
-                <path d="M306.818 245.455C344.474 245.455 375 272.928 375 306.818" stroke="#752A04" stroke-width="2"/>
-                <path d="M306.818 375C272.928 375 245.454 344.474 245.454 306.818" stroke="#752A04" stroke-width="2"/>
-                <path d="M375 306.818C375 344.474 344.474 375 306.818 375" stroke="#752A04" stroke-width="2"/>
-                <path d="M143.182 75C177.072 75 204.546 105.526 204.546 143.182" stroke="#752A04" stroke-width="2"/>
-                <path d="M75.0001 143.182C75.0001 105.526 105.526 75 143.182 75" stroke="#752A04" stroke-width="2"/>
-                <path d="M143.182 204.545C105.526 204.545 75.0001 177.072 75.0001 143.182" stroke="#752A04" stroke-width="2"/>
-                <path d="M143.182 204.545C199.666 204.545 245.455 250.335 245.455 306.818" stroke="#752A04" stroke-width="2"/>
-                <path d="M306.818 245.455C250.334 245.455 204.545 199.666 204.545 143.182" stroke="#752A04" stroke-width="2"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 276.428 139.286)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 293.572 122.143)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 327.857 156.429)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 310.714 173.571)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 293.572 190.714)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 259.286 156.429)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 173.572 276.429)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 156.428 293.572)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 139.286 276.429)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 173.572 310.714)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 156.428 327.857)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 139.286 345)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 139.286 310.714)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 122.143 293.572)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 122.143 327.857)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 105 310.714)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 105 345)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 276.428 173.571)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 293.572 156.429)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 310.714 139.286)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 259.286 190.714)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 327.857 122.143)" fill="#C3E2FF"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 139.286 156.429)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 122.143 139.286)" fill="#752A04"/>
-                <circle cx="113.571" cy="113.571" r="8.57143" fill="#752A04"/>
-                <circle cx="147.857" cy="113.571" r="8.57143" fill="#752A04"/>
-                <circle cx="113.571" cy="147.857" r="8.57143" fill="#752A04"/>
-                <circle cx="130.714" cy="165" r="8.57143" fill="#752A04"/>
-                <circle cx="147.857" cy="182.143" r="8.57143" fill="#752A04"/>
-                <circle cx="165" cy="130.714" r="8.57143" fill="#752A04"/>
-                <circle cx="182.143" cy="147.857" r="8.57143" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 190.714 207.857)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 173.572 190.714)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 156.428 173.571)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 242.143 259.286)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 259.286 276.429)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 276.428 293.572)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 293.572 276.429)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 310.714 293.572)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 327.857 310.714)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 293.572 345)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 276.428 327.857)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 259.286 310.714)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 293.572 310.714)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 310.714 327.857)" fill="#752A04"/>
-                <circle cx="8.57143" cy="8.57143" r="8.57143" transform="matrix(1 0 0 -1 327.857 345)" fill="#752A04"/>
-            </svg> -->
+
 <div id="homepage-profil" class="intersect">
   <img
     aria-hidden="true"
@@ -77,25 +18,44 @@ type: "Page"
   />
   <h1>Téotime Pacreau</h1>
 </div>
-
 <section id="homepage-brief" class="intersect">
   <h2>Conduite de projets numériques et mains dans le code</h2>
-  <article class="services">
+  <article>
     <ul>
       <li>
-        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="var(--txt)" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm45.66-93.66a8,8,0,0,1,0,11.32l-32,32a8,8,0,0,1-11.32-11.32L148.69,136H88a8,8,0,0,1,0-16h60.69l-18.35-18.34a8,8,0,0,1,11.32-11.32Z"></path></svg>
-        <span>AMOA</span>
+        <span><span style="font-feature-settings: 'ss06' 1; font-variation-settings: 'opsz' 32;">->&nbsp&nbsp</span>AMOA</span>
       </li>
       <li>
-        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="var(--txt)" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm45.66-93.66a8,8,0,0,1,0,11.32l-32,32a8,8,0,0,1-11.32-11.32L148.69,136H88a8,8,0,0,1,0-16h60.69l-18.35-18.34a8,8,0,0,1,11.32-11.32Z"></path></svg>
-        <span>Mode produit</span>
+        <span><span style="font-feature-settings: 'ss06' 1; font-variation-settings: 'opsz' 32;">->&nbsp&nbsp</span>Mode produit</span>
       </li>
       <li>
-        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="var(--txt)" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm45.66-93.66a8,8,0,0,1,0,11.32l-32,32a8,8,0,0,1-11.32-11.32L148.69,136H88a8,8,0,0,1,0-16h60.69l-18.35-18.34a8,8,0,0,1,11.32-11.32Z"></path></svg>
-        <span>Développement web</span>
+        <span><span style="font-feature-settings: 'ss06' 1; font-variation-settings: 'opsz' 32;">->&nbsp&nbsp</span>Développement web</span>
       </li>
     </ul>
   </article>
+</section>
+<section id="homepage-blog-shortlist" class="intersect">
+  <header class="homepage-projets-titre-flexer">
+    <h2>Derniers articles du blog</h2>
+    <hr />
+  </header>
+  <ul style="margin-top: calc(.5*var(--rythme))">
+    {%- for post in collections.articlesShortlist -%}
+      <li style="list-style-type: none; font-variation-settings: 'opsz' 22;">
+        <span style="font-feature-settings: 'ss06' 1; font-variation-settings: 'opsz' 32;">{{ loop.index }}&nbsp&nbsp</span>
+        <a href="{{post.url}}">{{ post.data.title }}</a>
+      </li>
+    {%- endfor -%}
+  </ul>
+</section>
+<section class="intersect">
+  <header class="homepage-projets-titre-flexer">
+    <h2>Essais</h2>
+    <hr />
+  </header>
+  <ul style="margin-top: calc(.5*var(--rythme))">{%- for post in collections.essais -%}
+    <li style="list-style-type: none; font-variation-settings: 'opsz' 22"><a href="{{post.url}}">{{ post.data.title }}</a></li>
+  {%- endfor -%}</ul>
 </section>
 <section id="homepage-projets" class="intersect">
   <header class="homepage-projets-titre-flexer">
@@ -141,7 +101,7 @@ type: "Page"
 </section>
 <section id="homepage-services" class="intersect">
   <header class="homepage-projets-titre-flexer">
-    <h2>Services</h2>
+    <h2>Compétences</h2>
     <hr />
   </header>
   <div id="homepage-services-grid">
